<resources>
    <string name="app_name">DnDEncounters</string>
    <string name="action_settings">Settings</string>
    <string name="addHumanTakePicTxt">Take Portrait</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="fa_times_circle">&#xf057;</string>
    <string name="fa_copy">&#xf0c5;</string>
    <string name="fa_play">&#xf144;</string>
    <string name="fa_times">&#xf00d;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_arrow_circle_left">&#xf0a8;</string>
    <string name="fa_arrow_circle_right">&#xf35a;</string>
    <string name="fa_arrow_circle_up">&#xf35b;</string>
    <string name="fa_arrow_circle_down">&#xf0ab;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_plus_circle">&#xf055;</string>
    <string name="fa_view">&#xf06e;</string>
    <string name="ConfirmPlayerDelete">Are you sure you want to delete this player?</string>
    <string name="ConfirmPcDelete">Are you sure you want to delete this player character?</string>
    <string name="ConfirmMonsterDelete">Are you sure you want to delete this monster?</string>
    <string name="ConfirmModuleDelete">Are you sure you want to delete this module?</string>
    <string name="addHumanHeaderTxt">Add a New Player</string>
    <string name="AddHumanBtnTxt">Add Player</string>
    <string name="EditPlayerTxt">Edit Player</string>
    <string name="EditPlayerBtnTxt">Update Player</string>
    <string name="DeletePlayerTxt">Delete Player</string>
    <string name="PlayerNameTxt">Player Name</string>
    <string name="PlayerPortraitDesc">Player Portrait</string>
    <string name="PlayerDciTxt">DCI Number</string>
    <string name="PlayerCharactersTxt">Player Characters</string>
    <string name="AddCharacterBtnTxt">Add Character</string>
    <string name="EditCharacterTxt">Edit Character</string>
    <string name="EditCharacterBtnTxt">Update Character</string>
    <string name="DeleteCharacterTxt">Delete Character</string>
    <string name="CharacterNameTxt">Character Name</string>
    <string name="PcRaceTxt">Character Race</string>
    <string name="PcClassTxt">Character Class</string>
    <string name="PcLevel">Level</string>
    <string name="PcAC">AC</string>
    <string name="PcHp">HP</string>
    <string name="PcPp">PP</string>
    <string name="PcSpellDc">Spell DC</string>
    <string name="MonsterTxt">Monsters</string>
    <string name="AddMonsterTxt">Add Monsterj</string>
    <string name="EditMonsterTxt">Edit Monster</string>
    <string name="UpdateMonsterTxt">Update Monster</string>
    <string name="DeleteMonsterTxt">Delete Monster</string>
    <string name="MonsterNameTxt">Monster Name</string>
    <string name="MonsterCrTxt">CR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dungeons &amp; Dragons</string>
    <string name="nav_header_subtitle">Encounters</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="PlayersTxt">Players</string>
    <string name="EncountersTxt">Encounters</string>
    <string name="title_activity_view_encounters">ViewEncounters</string>
    <string name="EncounterNameTxt">Encounter Name</string>
    <string name="AddEncounterTxt">Create  Encounter</string>
    <string name="EncounterMonstersTxt">Encounter Monsters</string>
    <string name="ncounterCrTxt">Encounter CR</string>
    <string name="RemoveMonsterTxt">Delete Monster</string>
    <string name="UpdateEncounterTxt">Update Encounter</string>
    <string name="DeleteEncounterTxt">Delete Encounter</string>
    <string name="CreatePartyTxt">Create Party</string>
    <string name="PartyMembersTxt">Party Members</string>
    <string name="NewPPCTxt">New Player and Character</string>
    <string name="NewPCTxt">New Character</string>
    <string name="ExistingPCTxt">Existing Character</string>
    <string name="BeginSessionTxt">Start Adventure!</string>
    <string name="PartyNameTxt">Party Name</string>
    <string name="NumPcTxt">NumPcs</string>
    <string name="TotalPartyMembersTxt"># Party Members:</string>
    <string name="AplTxt">APL:</string>
    <string name="ContinueAdventureTxt">Continue Previous Adventure</string>
    <string name="PlaySingleEncounterTxt">Play Single Encounter</string>
    <string name="CompleteAdventureTxt">Finish Adventure</string>
    <string name="AddEncounterToAdventureTxt">Add Encounter(s) to Adventure</string>
    <string name="UnplayedHeaderTxt">Encounter Queue</string>
    <string name="PlayedEncountersTxt">Completed Encounters (click to view)</string>
    <string name="ContinueEncounter">Continue Existing Encounter</string>
    <string name="ChangePartyTxt">Change Party</string>
    <string name="AddEncountersTxt">Add Encounter(s)</string>
    <string name="title_activity_view_monster_tokens">ViewMonsterTokens</string>
    <string name="MonsterTokenNameTxt">Monster Token Name</string>
    <string name="AddMonsterTokenTxt">Add a New Monster Token</string>
    <string name="MonsterTokenTypeNumberTxt">Single Number Token</string>
    <string name="MonsterTokenTypeColorTxt">Single Color Token</string>
    <string name="MonsterTokenTypeColoredNumberTxt">Token with Color and Number</string>
    <string name="MonsterTokenTypeMiniTxt">Image of a Mini</string>
    <string name="TokenNumberTxt">Token Number</string>
    <string name="PickTokenColorTxt">Pick Token Color</string>
    <string name="TakePortraitOfMiniTxt">Take Picture of Mini</string>
    <string name="MonsterTokensTxt">Monster Tokens</string>
    <string name="EditMonsterTokenTxt">Edit Monster Token</string>
    <string name="UpdateMonsterTokenTxt">Update Monster Token</string>
    <string name="DeleteMonsterTokenTxt">Delete Monster Token</string>
    <string name="MonsterTokensAssignedTxt">Monster Tokens Assigned</string>
    <string name="AssignMonsterTokensTxt">Assign Monster Tokens</string>
    <string name="PlayerInitiativeAssignedTxt">Player Initiative Assigned</string>
    <string name="AssignPlayerInitiativeTxt">Assign Player Initiative</string>
    <string name="UseIndividualMonsterInitiativeTxt">Use Individual Monster Initiative</string>
    <string name="AssignIndividualMonsterInitiativeTxt">Assign Individual Monster Initiative</string>
    <string name="AssignGroupMonsterInitiativeTxt">Assign Group Monster Initiative</string>
    <string name="RollForMonsterHp">Roll for Each Monster\'s HP</string>
    <string name="StartEncounterTxt">Start Encounter</string>
    <string name="DoneAssigningTokensTxt">Done Assigning Tokens</string>
    <string name="InitiativeTxt">Initiative</string>
    <string name="PcAcColonTxt">AC:</string>
    <string name="PcSpellDcColonTxt">Spell DC: </string>
    <string name="PossibleTargetsTxt">Available Targets</string>
    <string name="FinishPlayerTurnTxt">Finish Player Turn</string>
    <string name="HpColonTxt">HP:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MonsterSizeTxt">Size</string>
    <string name="MonsterTypeTxt">Type</string>
    <string name="StrColonTxt">STR:</string>
    <string name="DexColonTxt">DEX:</string>
    <string name="ConColonTxt">CON:</string>
    <string name="IntColonTxt">INT:</string>
    <string name="WisColonTxt">WIS:</string>
    <string name="ChaColonTxt">CHA:</string>
    <string name="SpecialAbilitiesTxt">Special Abilities</string>
    <string name="AbilityNameTxt">Ability Name</string>
    <string name="AbilityDescriptionTxt">Ability Description</string>
    <string name="ActionsTxt">Actions</string>
    <string name="HealingTxt">Healing</string>
    <string name="DamageTxt">Damage</string>
    <string name="TokenPortraitTxt">Token Portrait</string>
    <string name="FinishMonsterTxt">Finish with Monster</string>
    <string name="MakeDeadMonsterTxt">Mark Monster Dead</string>
    <string name="MakeAliveMonsterTxt">Mark Monster Alive</string>
    <string name="PcPpColonTxt">PP:</string>
    <string name="AvailablePlayersTxt">Available Players</string>
    <string name="FinishMonsterTurnTxt">Finishg Monster Turn</string>
    <string name="VsTxt">Vs.</string>
    <string name="RoundNumTxt">Turn #</string>
    <string name="NextUpTxt">Next Up:</string>
    <string name="ContinueTurnTxt">Continue Turn</string>
    <string name="TurnOverTxt">Turn Over!</string>
    <string name="NextTurnTxt">Next Turn</string>
    <string name="FinishEncounterTxt">Finish Encounter</string>
    <string name="InitiativeColonTxt">Initiative:</string>
    <string name="DeadTxt">Dead</string>
    <string name="EncounterOverTxt">Encounter Over (No More Monsters)!</string>
    <string name="ActiveAdventuresTxt">Active Adventures</string>
    <string name="AdventureNameTxt">Adventure Name</string>
    <string name="CreatedOnTxt">Created:</string>
    <string name="AdventureTxt">Adventure</string>
    <string name="SpellNameTxt">Spell Name</string>
    <string name="action_spells">Lookup Spells</string>
    <string name="SpellDescriptionTxt">Spell Description</string>
    <string name="SpellPageTxt">Page:</string>
    <string name="SpellRangeTxt">Range:</string>
    <string name="ComponentsTxt">Components:</string>
    <string name="SpellMaterialsTxt">Materials:</string>
    <string name="SpellRitualTxt">Ritual</string>
    <string name="SpellConcentrationTxt">Concentration</string>
    <string name="SpellDurationTxt">Duration:</string>
    <string name="CastingTimeTxt">Casting Time:</string>
    <string name="SpellClassTxt">Classes:</string>
    <string name="SpellSchoolTxt">School:</string>
    <string name="SlashTxt">/</string>
    <string name="AddMonsterToEncounterTxt">Add Monster to Encounter</string>
    <string name="OneTxt">1</string>
    <string name="TwoTxt">2</string>
    <string name="ThreeTxt">3</string>
    <string name="FourTxt">4</string>
    <string name="FiveTxt">5</string>
    <string name="SixTxt">6</string>
    <string name="SevenTxt">7</string>
    <string name="EightTxt">8</string>
    <string name="NineTxt">9</string>
    <string name="TenTxt">10</string>
    <string name="PlayerTurnTxt">Player Turn</string>
    <string name="MonsterTurnTxt">Monster Turn</string>
    <string name="ViewGitHubTxt">View Project on GitHub</string>
    <string name="title_activity_view_monsters">ViewMonsters</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="MonsterTabTxt"><![CDATA[D&D Monsters]]></string>
    <string name="CustomMonsterTab">Custom Monsters</string>
    <string name="AddCustomMonsterTxt">Add Custom Monster</string>
    <string name="StrTxt">STR</string>
    <string name="DexTxt">DEX</string>
    <string name="ConTxt">CON</string>
    <string name="WisTxt">WIS</string>
    <string name="IntTxt">INT</string>
    <string name="ChaTxt">CHA</string>
    <string name="NumDiceTxt">Number of Dice</string>
    <string name="DiceTypeTxt">Type of Dice</string>
    <string name="DiceD4Txt">d4</string>
    <string name="DiceD6Txt">d6</string>
    <string name="DiceD8Txt">d8</string>
    <string name="DiceD10Txt">d10</string>
    <string name="DiceD12Txt">d12</string>
    <string name="DiceD20Txt">d20</string>
    <string name="ModifierTxt">Add Modifier</string>
    <string name="ZeroTxt">0</string>
    <string name="RollTxt">Roll!</string>
    <string name="RollDiceTxt">Roll Dice</string>
    <string name="HitDiceColonTxt">Hit Dice:</string>
    <string name="EnterHitDiceTxt">Enter Hit Dice</string>
    <string name="EditustomMonsterTxt">Edit Custom Monster</string>
    <string name="DeleteCustomMonsterTxt">Delete Custom Monster</string>
    <string name="SpeedTxt">Speed</string>
    <string name="SpeedColonTxt">Speed:</string>
</resources>