<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/players_icon"
            android:title="@string/PlayersTxt" />
        <item
            android:id="@+id/nav_encounters"
            android:icon="@drawable/encounter_icon"
            android:title="@string/EncountersTxt" />
        <item
            android:id="@+id/nav_all_monsters"
            android:icon="@drawable/monster_icon"
            android:title="@string/MonsterTxt" />
        <item
            android:id="@+id/nav_monster_tokens"
            android:icon="@drawable/monster_token"
            android:title="@string/MonsterTokensTxt" />
        <item
            android:id="@+id/nav_project_link"
            android:icon="@drawable/github_logo"
            android:title="@string/ViewGitHubTxt" />
    </group>

</menu>
