<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.characters.EditCharacter">

    <EditText
        android:id="@+id/characterNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/CharacterNameTxt"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/characterClassTxt">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/characterClassTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/PcClassTxt"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/characterRaceTxt" />

    <EditText
        android:id="@+id/characterRaceTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PcRaceTxt"
        android:importantForAutofill="no"
        android:nextFocusDown="@+id/characterAcTxt"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/characterAcTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/PcAC"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:importantForAutofill="no"
            android:singleLine="true"
            android:textSize="18sp"
            android:nextFocusDown="@+id/characterHpTxt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/characterHpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/PcHp"
            android:nextFocusDown="@+id/characterPpTxt"
            android:inputType="number"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/characterPpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/PcPp"
            android:importantForAutofill="no"
            android:nextFocusDown="@+id/characterLvTxt"
            android:inputType="number"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/characterLvTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:hint="@string/PcLevel"
            android:nextFocusDown="@+id/characterDcTxt"
            android:inputType="number" />

        <EditText
            android:id="@+id/characterDcTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/PcSpellDc"
            android:nextFocusDown="@+id/button"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="updatePC"
        android:text="@string/EditCharacterBtnTxt" />

    <Button
        android:id="@+id/deletePcBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorError"
        android:onClick="confirmDeletePc"
        android:text="@string/DeleteCharacterTxt" />

</LinearLayout>