<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView44"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/NumDiceTxt"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44">

        <ToggleButton
            android:id="@+id/DiceNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/OneTxt"
            android:textAlignment="center"
            android:textOff="@string/OneTxt"
            android:textOn="@string/OneTxt"
            android:textStyle="bold"
            android:visibility="visible" />

        <ToggleButton
            android:id="@+id/DiceNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/TwoTxt"
            android:textOff="@string/TwoTxt"
            android:textOn="@string/TwoTxt"
            android:visibility="visible" />

        <ToggleButton
            android:id="@+id/DiceNum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/ThreeTxt"
            android:textOff="@string/ThreeTxt"
            android:textOn="@string/ThreeTxt" />

        <ToggleButton
            android:id="@+id/DiceNum4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/FourTxt"
            android:textOff="@string/FourTxt"
            android:textOn="@string/FourTxt" />

        <ToggleButton
            android:id="@+id/DiceNum5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/FiveTxt"
            android:textOff="@string/FiveTxt"
            android:textOn="@string/FiveTxt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <ToggleButton
            android:id="@+id/DiceNum6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/SixTxt"
            android:textAlignment="center"
            android:textOff="@string/SixTxt"
            android:textOn="@string/SixTxt"
            android:textStyle="bold"
            android:visibility="visible" />

        <ToggleButton
            android:id="@+id/DiceNum7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/SevenTxt"
            android:textOff="@string/SevenTxt"
            android:textOn="@string/SevenTxt"
            android:visibility="visible" />

        <ToggleButton
            android:id="@+id/DiceNum8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/EightTxt"
            android:textOff="@string/EightTxt"
            android:textOn="@string/EightTxt" />

        <ToggleButton
            android:id="@+id/DiceNum9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/NineTxt"
            android:textOff="@string/NineTxt"
            android:textOn="@string/NineTxt" />

        <ToggleButton
            android:id="@+id/DiceNum10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/TenTxt"
            android:textOff="@string/TenTxt"
            android:textOn="@string/TenTxt" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView46"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/DiceTypeTxt"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46">

        <ToggleButton
            android:id="@+id/DiceD4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/DiceD4Txt"
            android:textOff="@string/DiceD4Txt"
            android:textOn="@string/DiceD4Txt" />

        <ToggleButton
            android:id="@+id/DiceD6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/DiceD6Txt"
            android:textOff="@string/DiceD6Txt"
            android:textOn="@string/DiceD6Txt" />

        <ToggleButton
            android:id="@+id/DiceD8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DiceD8Txt"
            android:textOff="@string/DiceD8Txt"
            android:textOn="@string/DiceD8Txt" />

        <ToggleButton
            android:id="@+id/DiceD10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DiceD10Txt"
            android:textOff="@string/DiceD10Txt"
            android:textOn="@string/DiceD10Txt" />

        <ToggleButton
            android:id="@+id/DiceD12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DiceD12Txt"
            android:textOff="@string/DiceD12Txt"
            android:textOn="@string/DiceD12Txt" />

        <ToggleButton
            android:id="@+id/DiceD20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DiceD20Txt"
            android:textOff="@string/DiceD20Txt"
            android:textOn="@string/DiceD20Txt" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView47"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ModifierTxt"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />

    <EditText
        android:id="@+id/RollModifierEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/ZeroTxt"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <Button
        android:id="@+id/RollBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/RollTxt"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RollModifierEt" />

    <Button
        android:id="@+id/CancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RollModifierEt" />


</android.support.constraint.ConstraintLayout>