<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/PcNameTv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="2"
        android:text="@string/CharacterNameTxt"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="fill_vertical"
        android:text="@string/PcAcColonTxt"
        android:textSize="14sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/PcAcTv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="fill_vertical"
        android:text="@string/PcAcColonTxt"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="fill_vertical"
        android:text="@string/PcPpColonTxt"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/PcPpTv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="fill_vertical"
        android:text="@string/PcPp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="fill_vertical"
        android:text="@string/PcSpellDcColonTxt"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/PcDcTv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="fill_vertical"
        android:text="@string/PcSpellDc"
        android:textSize="14sp" />

</LinearLayout>